<resources>
    <string name="app_name">TestApp</string>

    <string name="hint_name">Masukkan nama...</string>

    <string name="label_name">Nama : </string>
    <string name="label_tanggal">Tanggal</string>
    <string name="label_tgl_lahir">Tanggal lahir</string>

    <string name="btn_next">Selanjutnya</string>
    <string name="btn_event">Pilih event</string>
    <string name="btn_guest">Pilih guest</string>

    <string name="polindrome_true">True</string>
    <string name="polindrome_false">False</string>
    <string name="label_perintah">Sertakan gambar profil anda untuk melengkapi profil.</string>
    <string name="label_hello">Selamat Datang!</string>
    <string name="action_search">search</string>
    <string name="action_map">map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>